--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ryan H Burbank",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.12.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1"
